<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:weightSum="7">

    <TextView
        android:id="@+id/tvSunday"
        style="@style/CalendarPickerCell.Week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/calendar_sunday" />

    <TextView
        android:id="@+id/tvMonday"
        style="@style/CalendarPickerCell.Week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/calendar_monday" />

    <TextView
        android:id="@+id/tvTuesday"
        style="@style/CalendarPickerCell.Week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/calendar_tuesday" />

    <TextView
        android:id="@+id/tvWednesday"
        style="@style/CalendarPickerCell.Week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/calendar_wednesday" />

    <TextView
        android:id="@+id/tvThursday"
        style="@style/CalendarPickerCell.Week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/calendar_thursday" />

    <TextView
        android:id="@+id/tvFriday"
        style="@style/CalendarPickerCell.Week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/calendar_friday" />

    <TextView
        android:id="@+id/tvSaturday"
        style="@style/CalendarPickerCell.Week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/calendar_saturday" />

</LinearLayout>